# cloud-atlas

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLOUD_ATLAS_CHALLENGE_SPECIFICATION.md  Dockerfile  README.md  compose.yaml  lefthook.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: exceptions.py  main.py
app/api/: dependencies.py  error_handlers.py
app/api/routes/: tags.py
app/api/v1/: health.py  values.py
app/core/: config.py  logging.py  rate_limit.py
app/db/: models.py
app/repositories/: tags.py  values.py
app/schemas/: common.py  tags.py  values.py
app/services/: tags.py  values.py
frontend/: app.js  index.html  style.css
migrations/: env.py
migrations/versions/: 56fb3ff2bb94_initial_tables.py
scripts/: generate-client.sh
tests/: conftest.py
tests/integration/: test_health.py  test_tags.py  test_values.py
